# aoc-2023

./: Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  runrs.bat
.github/workflows/: rust.yml
aoc-py/: __init__.py  __main__.py  solution.py  utils.py
aoc-py/solutions/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_py/: __main__.py
aoc_py/solutions/: __init__.py  day1.py
inputs/: day1.txt  day11.txt  day13.txt  day15.txt  day16.txt  day17.txt  day19.txt  day2.txt  day20.txt  day22.txt  day23.txt  day24.txt  day25.txt  day3.txt  day4.txt  day6.txt  day7.txt  day9.txt
src/: error.rs  lib.rs  main.rs  solution.rs  util.rs
src/solutions/: day1.rs  mod.rs
