[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tom-the-Bomb"]
description = "Rust solutions for the 2023 Advent of Code"
repository = "https://github.com/Tom-the-Bomb/aoc-2023"
keywords = ["adventofcode", "aoc"]
categories = ["Algorithms", "Command line utilities"]

[profile.release]
overflow-checks = true
lto = "fat"

[dependencies]
rustworkx-core = "0.13"
nalgebra = "0.32"
astro_nalgebra = "0.1"